# hooklib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hooklib.cpp  hooklib.hpp
Include/: HookLib.hpp
Include/HookLib/: Utils.hpp
Include/HookLib/Impl/Windows_AMD64/: FuncUtils.hpp  HookLib.hpp
Source/Impl/Windows_AMD64/: HookLib.cpp  MemoryConstants.hpp  Trampolines.cpp  Trampolines.hpp
Source/Impl/Windows_AMD64/Assembly/: AssemblyPool.cpp  AssemblyPool.hpp  AssemblySegment.hpp  AssemblyWriter.hpp
Source/x86/HDE/: hde32.c  hde32.h  hde64.c  hde64.h
Tests/: CMakeLists.txt  main.cpp  main.hpp
Tests/Windows_AMD64/: FunctionHookTests.cpp  TrampolineTests.cpp
examples/: CMakeLists.txt  big_return.cpp  call_hooks.cpp  foo.cpp  foo_example.cpp  method.cpp  naked.cpp  no_args.cpp  no_return.cpp
include/: hooklib.hpp
include/hooklib/: hde32.h  hde64.h
src/: hooklib.cpp
